<resources>
    <string name="app_name">Travel Seal</string>
    <string name="deal_title">Deal Title</string>
    <string name="deal_price">Deal Price (Numbers only)</string>
    <string name="deal_description">Deal Description</string>
    <string name="save">Save</string>
    <string name="firebase_reference">travelseal</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="price_hint">N 20,000.00</string>
    <string name="todo">TODO</string>
</resources>